--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -1,6 +1,15 @@
+![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
+
 # Introduction
- 
-Welcome to Nextra! This is a basic docs template. You can use it as a starting point for your own project :)
+
+import Image from "next/image";
+
+<Image
+  src="https://i.ibb.co/3BQWK09/c2.jpg"
+  alt="Hello"
+  width={500}
+  height={500}
+/>;
 
 ## What is Nextra?
 
