--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -1,15 +1,10 @@
+---
+Title: 𝕟𝕠𝕚𝕤𝕣𝕝
+---
+
 ![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
 
 # Introduction
-
-import Image from "next/image";
-
-<Image
-  src="https://i.ibb.co/3BQWK09/c2.jpg"
-  alt="Hello"
-  width={500}
-  height={500}
-/>;
 
 ## What is Nextra?
 
