--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -4,12 +4,4 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 
 ![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
 
-# Introduction
-
-## What is Nextra?
-
-A **simple**, **powerful** and **flexible** site generation framework with everything you love from Next.js.
-
-## Documentation
-
-The documentation is available at [https://nextra.site](https://nextra.site).
+# 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
