--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -5,3 +5,11 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 ![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
 
 # 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
+
+> Bring down the oppressors !
+
+## Websites
+
+
+
+## Tools
