--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -4,13 +4,15 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 
 ![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
 
-# 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
+# ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
 > Bring down the oppressors !
 
 ## Websites
 
-| Org | URL | Description |
-| --- | --- | ----------- |
+| Org         | URL                              | Description                                     |
+| ----------- | -------------------------------- | ----------------------------------------------- |
+| The Witness | https://boycott.thewitness.news/ | Searchable database of brands that support Isrl |
+| StopZionistHate | StopZionistHate
 
 ## Tools
