--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -10,9 +10,16 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 
 ## Websites
 
-| Org         | URL                              | Description                                     |
-| ----------- | -------------------------------- | ----------------------------------------------- |
-| The Witness | https://boycott.thewitness.news/ | Searchable database of brands that support Isrl |
-| StopZionistHate | StopZionistHate
+| Org               | URL                                 | Description                                     |
+| ----------------- | ----------------------------------- | ----------------------------------------------- |
+| The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl |
+| Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                             |
+| BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                    |
+| Pal Action        | https://www.palestineaction.org/ | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation 
 
-## Tools
+
+## Authentic News Sources
+
+| Org               | URL                                 | Description                                     |
+| ----------------- | ----------------------------------- | ----------------------------------------------- |
+| AlJazeera English Official Twitter | 
