--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -10,16 +10,23 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 
 ## Websites
 
-| Org               | URL                                 | Description                                     |
-| ----------------- | ----------------------------------- | ----------------------------------------------- |
-| The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl |
-| Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                             |
-| BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                    |
-| Pal Action        | https://www.palestineaction.org/ | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation 
+import { Callout } from "nextra/components";
 
+<Callout emoji="👾">
+  **Space Invaders** is a 1978 shoot 'em up arcade game developed by Tomohiro
+  Nishikado.
+</Callout>
+;
+
+| Org               | URL                                 | Description                                                                                           |
+| ----------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
+| The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
+| Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
+| BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
+| Pal Action        | https://www.palestineaction.org/    | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
 
 ## Authentic News Sources
 
-| Org               | URL                                 | Description                                     |
-| ----------------- | ----------------------------------- | ----------------------------------------------- |
-| AlJazeera English Official Twitter | 
+| Org                                | URL | Description |
+| ---------------------------------- | --- | ----------- |
+| AlJazeera English Official Twitter |
