--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -1,7 +1,3 @@
----
-Title: 𝕟𝕠𝕚𝕤𝕣𝕝
----
-
 ![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
 
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
@@ -12,11 +8,9 @@ Title: 𝕟𝕠𝕚𝕤𝕣𝕝
 
 import { Callout } from "nextra/components";
 
-<Callout emoji="👾">
-  **Space Invaders** is a 1978 shoot 'em up arcade game developed by Tomohiro
-  Nishikado.
+<Callout type="error" emoji="️✊">
+  Take action now, the forces of evil are ganging up to destroy you
 </Callout>
-;
 
 | Org               | URL                                 | Description                                                                                           |
 | ----------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
@@ -26,6 +20,13 @@ import { Callout } from "nextra/components";
 | Pal Action        | https://www.palestineaction.org/    | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
 
 ## Authentic News Sources
+
+<Callout type="warning" emoji="⚠️">
+  Be wary there is a sustained propganda war being waged on all of social media,
+  With many accounts with a lerge following publishing news stories with no
+  references and are just views farming for payouts. The following are the only
+  official sources of information IMHO. The reader is encoraged to DYOR.
+</Callout>
 
 | Org                                | URL | Description |
 | ---------------------------------- | --- | ----------- |
