--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -22,12 +22,14 @@ import { Callout } from "nextra/components";
 ## Authentic News Sources
 
 <Callout type="warning" emoji="⚠️">
-  Be wary there is a sustained propganda war being waged on all of social media,
-  With many accounts with a lerge following publishing news stories with no
-  references and are just views farming for payouts. The following are the only
-  official sources of information IMHO. The reader is encoraged to DYOR.
+  Be wary, as there is a sustained propaganda war being waged on all of social
+  media. Many accounts with a large following publish news stories without
+  proper references, solely for the purpose of generating views and earning
+  payouts. In my humble opinion, the following are the only official sources of
+  information. The reader is encouraged to do their own research (DYOR).
 </Callout>
 
-| Org                                | URL | Description |
-| ---------------------------------- | --- | ----------- |
-| AlJazeera English Official Twitter |
+| img                                     | Org                                | URL                           | Description                |
+| --------------------------------------- | ---------------------------------- | ----------------------------- | -------------------------- |
+| ![](https://i.ibb.co/Y3MNf8F/image.png) | AlJazeera English Official Twitter | https://twitter.com/AJEnglish | AlJazeera English Official |
+|                                         | Al Jazeera Arabic Official Twitter | https://twitter.com/AJArabic  | AlJazeera Arabic Official  |
