--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -12,12 +12,12 @@ import { Callout } from "nextra/components";
   Take action now, the forces of evil are ganging up to destroy you
 </Callout>
 
-| Org               | URL                                 | Description                                                                                           |
-| ----------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
-| The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
-| Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
-| BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
-| Pal Action        | https://www.palestineaction.org/    | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+| img                                                                     | Org                              | URL                                                                                                   | Description                                     |
+| ----------------------------------------------------------------------- | -------------------------------- | ----------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
+| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/) | The Witness                      | https://boycott.thewitness.news/                                                                      | Searchable database of brands that support Isrl |
+| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)          | Stop Zionist Hate                | https://twitter.com/StopZionistHate                                                                   | Report Islamophobia                             |
+| BDS Movement                                                            | https://twitter.com/BDSmovement  | Global Isrl Boycott Movement                                                                          |
+| Pal Action                                                              | https://www.palestineaction.org/ | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
 
 ## Authentic News Sources
 
@@ -29,7 +29,7 @@ import { Callout } from "nextra/components";
   information. The reader is encouraged to do their own research (DYOR).
 </Callout>
 
-| img                                     | Org                                | URL                           | Description                |
-| --------------------------------------- | ---------------------------------- | ----------------------------- | -------------------------- |
-| ![](https://i.ibb.co/Y3MNf8F/image.png) | AlJazeera English Official Twitter | https://twitter.com/AJEnglish | AlJazeera English Official |
-|                                         | Al Jazeera Arabic Official Twitter | https://twitter.com/AJArabic  | AlJazeera Arabic Official  |
+| img                                                                   | Org                                              | URL                             | Description                                                  |
+| --------------------------------------------------------------------- | ------------------------------------------------ | ------------------------------- | ------------------------------------------------------------ |
+| [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
+| [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
