--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -1,4 +1,8 @@
-![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
+img![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
+
+import { SpeedInsights } from "@vercel/speed-insights/next";
+
+<SpeedInsights />
 
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
@@ -9,15 +13,26 @@
 import { Callout } from "nextra/components";
 
 <Callout type="error" emoji="️✊">
-  Take action now, the forces of evil are ganging up to destroy you
+  Take action now, the forces of evil are ganging up to destroy you.
 </Callout>
 
-| img                                                                     | Org                              | URL                                                                                                   | Description                                     |
-| ----------------------------------------------------------------------- | -------------------------------- | ----------------------------------------------------------------------------------------------------- | ----------------------------------------------- |
-| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/) | The Witness                      | https://boycott.thewitness.news/                                                                      | Searchable database of brands that support Isrl |
-| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)          | Stop Zionist Hate                | https://twitter.com/StopZionistHate                                                                   | Report Islamophobia                             |
-| BDS Movement                                                            | https://twitter.com/BDSmovement  | Global Isrl Boycott Movement                                                                          |
-| Pal Action                                                              | https://www.palestineaction.org/ | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+| img                                                                         | Org               | URL                                 | Description                                                                                           |
+| --------------------------------------------------------------------------- | ----------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
+| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
+| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
+| [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
+| [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+
+### Apps
+
+<Callout type="info" emoji="ℹ️">
+  Apps are getting blocked frequently, seek alternative sources for sideloading
+  if its unavailable.
+</Callout>
+
+| img                                                                          | Org           | URL                                 | Description                                          |
+| ---------------------------------------------------------------------------- | ------------- | ----------------------------------- | ---------------------------------------------------- |
+| [![](https://i.ibb.co/mhMrnMC/image.png)](https://linktr.ee/Nothanksboycott) | No Thanks App | https://twitter.com/NoThanksBoycott | App that scans barcodes to detect links to isNOTreal |
 
 ## Authentic News Sources
 
@@ -33,3 +48,24 @@ import { Callout } from "nextra/components";
 | --------------------------------------------------------------------- | ------------------------------------------------ | ------------------------------- | ------------------------------------------------------------ |
 | [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
 | [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
+
+## What can I do ?
+
+<Callout type="info" emoji="ℹ️">
+  Here is a short list to get the gears in your head turning.
+</Callout>
+
+<img
+  src="https://c.tenor.com/d1HGFEfB7F4AAAAd/tenor.gif"
+  width="25%"
+  align="center"
+/>
+
+1. Search for charities mentioned on Twitter or via a web search actively assisting those affected.
+2. Write to your politician expressing your concern.
+3. Donate for the purchase of [eSims](https://twitter.com/SpeakUp_00/status/1735842857632584191). Follow [activists](https://twitter.com/Mirna_elhelbawi) for updates on this.
+4. Increase awareness with only verifiable facts.
+5. Refrain from reactionary posting.
+6. Be extremely critical of accounts posting information without references.
+7. Send prayers.
+8. Don't argue with Islamophobic, Zionist, or anti-Palestinian trolls online. They are all fake accounts being operated by troll farms in India.
