--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -1,14 +1,10 @@
-img![Hello](https://i.ibb.co/3BQWK09/c2.jpg)
-
-import { SpeedInsights } from "@vercel/speed-insights/next";
-
-<SpeedInsights />
+![](https://i.ibb.co/3BQWK09/c2.jpg)
 
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
 > Bring down the oppressors !
 
-## Websites
+## 🌐 Websites
 
 import { Callout } from "nextra/components";
 
@@ -23,7 +19,7 @@ import { Callout } from "nextra/components";
 | [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
 | [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
 
-### Apps
+### 📱 Apps
 
 <Callout type="info" emoji="ℹ️">
   Apps are getting blocked frequently, seek alternative sources for sideloading
@@ -34,7 +30,7 @@ import { Callout } from "nextra/components";
 | ---------------------------------------------------------------------------- | ------------- | ----------------------------------- | ---------------------------------------------------- |
 | [![](https://i.ibb.co/mhMrnMC/image.png)](https://linktr.ee/Nothanksboycott) | No Thanks App | https://twitter.com/NoThanksBoycott | App that scans barcodes to detect links to isNOTreal |
 
-## Authentic News Sources
+## 📰 Authentic News Sources
 
 <Callout type="warning" emoji="⚠️">
   Be wary, as there is a sustained propaganda war being waged on all of social
@@ -49,7 +45,7 @@ import { Callout } from "nextra/components";
 | [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
 | [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
 
-## What can I do ?
+## ⚙️ What can I do ?
 
 <Callout type="info" emoji="ℹ️">
   Here is a short list to get the gears in your head turning.
