--- a/w1/v1/pages/OpSec.mdx
+++ b/w1/v1/pages/OpSec.mdx
@@ -1,2 +1,17 @@
-# OpSec
+# 🥷 OpSec
 
+![](https://i.ibb.co/34gZ3m6/image.png)
+
+## Recommendation
+
+import { Callout } from "nextra/components";
+
+<Callout type="warning" emoji="⚠️">
+  Vocal accs are being targeted for harrashment and banishment by ZioRats. Here
+  are some precautions to take
+</Callout>
+
+1. Scrub all sensitive personal information from all social media.
+2. Refrain from being baited into releasing any kind of personal information.
+3. Do not click on links either in your DM's or emails or random messages posted.
+4. Make a new social account using email addresses that are not linked to your phone, or has been verified with personal information, or linked to other important things such as banking or work etc.
