--- a/w1/v1/pages/about.mdx
+++ b/w1/v1/pages/about.mdx
@@ -1,3 +1,3 @@
-# About
+# ⚔️ About
 
-This is the about page! This page is shown on the navbar.
+<img src="https://i.ibb.co/3FWFfxC/de1.gif" width="300%"></img>
