--- a/w1/v1/pages/OpSec.mdx
+++ b/w1/v1/pages/OpSec.mdx
@@ -8,10 +8,13 @@ import { Callout } from "nextra/components";
 
 <Callout type="warning" emoji="⚠️">
   Vocal accs are being targeted for harrashment and banishment by ZioRats. Here
-  are some precautions to take
+  are some precautions to take.
 </Callout>
 
 1. Scrub all sensitive personal information from all social media.
 2. Refrain from being baited into releasing any kind of personal information.
 3. Do not click on links either in your DM's or emails or random messages posted.
 4. Make a new social account using email addresses that are not linked to your phone, or has been verified with personal information, or linked to other important things such as banking or work etc.
+5. Your social media activity is used to make a profile of you , to find your weaknesses. Likes, follows, rt's , comments are all used to use that information against you.
+6. Social media apps are extremely intrusive, and continuously broadcast your information, this includes your geo location , device identifier information, internet activities, etc. Uninstall social media apps on your main device that has banking information, personal details etc, acess the social media via the incognito feature of your device broser and log in via the website with your location off and better still using a VPN.
+
