--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -12,12 +12,14 @@ import { Callout } from "nextra/components";
   Take action now, the forces of evil are ganging up to destroy you.
 </Callout>
 
-| img                                                                         | Org               | URL                                 | Description                                                                                           |
-| --------------------------------------------------------------------------- | ----------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
-| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | The Witness       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
-| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | Stop Zionist Hate | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
-| [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
-| [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+| img                                                                         | Org                               | URL                                 | Description                                                                                           |
+| --------------------------------------------------------------------------- | --------------------------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
+| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | The Witness                       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
+| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | Stop Zionist Hate                 | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
+| [![](https://i.ibb.co/y0dsbNj/image.png)](https://www.ravenmission.org/)    | Stop Zionist Hate - Raven Mission | https://www.ravenmission.org/       | Project docuemnting atrocities from StopZionsimHate                                                   |
+| [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement                      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
+| [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action                        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+| [![](https://i.ibb.co/5WMw3S0/image.png)](https://gaza23.com/)              | Gaza23                            | http://gaza23.com/                  | Documenting atrocities                                                                                |
 
 ### 📱 Apps
 
@@ -65,3 +67,16 @@ import { Callout } from "nextra/components";
 6. Be extremely critical of accounts posting information without references.
 7. Send prayers.
 8. Don't argue with Islamophobic, Zionist, or anti-Palestinian trolls online. They are all fake accounts being operated by troll farms in India.
+
+## 💻 Software
+
+<Callout type="info" emoji="ℹ️">
+  Most if not all commerical software have an
+  [opensource](https://opensource.com/resources/what-open-source) alternative
+  with very permissive licesnes. Which can be used commercially also. Here are
+  some open source alternative listings to get you started.
+</Callout>
+
+| img                                                                              | Org                     | URL                            | Description                                     |
+| -------------------------------------------------------------------------------- | ----------------------- | ------------------------------ | ----------------------------------------------- |
+| [![](https://i.ibb.co/T4Zqw6n/image.png)](https://www.opensourcealternative.to/) | OpenSourceAlternativeTo | https://twitter.com/jonathimer | Open source alternatives to commercial software |
