--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -2,6 +2,12 @@
 
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
+import { Analytics } from "@vercel/analytics/react";
+import { SpeedInsights } from "@vercel/speed-insights/next";
+
+<Analytics />
+<SpeedInsights />
+
 > Bring down the oppressors !
 
 ## 🌐 Websites
@@ -46,6 +52,8 @@ import { Callout } from "nextra/components";
 | --------------------------------------------------------------------- | ------------------------------------------------ | ------------------------------- | ------------------------------------------------------------ |
 | [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
 | [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
+
+### 
 
 ## ⚙️ What can I do ?
 
