--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -53,7 +53,15 @@ import { Callout } from "nextra/components";
 | [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
 | [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
 
-### 
+### ⚠️ Stories of interest
+
+> This section are stories which you may find interesting. Since there is an assault on free speech and existence of useful information on social media, there is a high probability these will be removed at anytime.
+
+|                                      Source                                      |                                                                                Story                                                                                 |                                                                                                                                                       Summary                                                                                                                                                        |
+| :------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
+|                 [TheIntercept](https://twitter.com/theintercept)                 | [HARVARD ENDOWMENT INVESTOR AND OTHER BUSINESS LEADERS TAKE A SOLIDARITY TRIP TO ISRAEL](https://theintercept.com/2023/12/19/investors-israel-tech-mission-harvard/) |                                                                                             Bunch of ZioRats pledged support for genocide, make note of the organizations before seeking funding of any kind from them.                                                                                              |
+| [StopZionistHate](https://x.com/StopZionistHate/status/1736452332118815137?s=20) |                          [Tal Broda head of AI Research Calls for genocide](https://x.com/StopZionistHate/status/1736452332118815137?s=20)                           | Sign [Petition](https://www.ipetitions.com/petition/fire-tal-broda-immediately) to force OpenAI to action, as of Thu Dec 21 14:57:56 UTC 2023 there are more than 8K signatures, but the ZioRat Company has not taken any action. It is recommended to abandon all dealings with this company and seek alternatives. |
+|                       [972Mag](https://twitter.com/972mag)                       |    [A mass assassination factory’: Inside Israel’s calculated bombing of Gaza](https://www.972mag.com/mass-assassination-factory-israel-calculated-bombing-gaza/)    |                                                                                              _Habsora_ and AI systemn buil for mass killing and genocide. Speculated to be developed with OpenAI ( Founder is a ZioRat)                                                                                              |
 
 ## ⚙️ What can I do ?
 
