--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -55,13 +55,14 @@ import { Callout } from "nextra/components";
 
 ### ⚠️ Stories of interest
 
-> This section are stories which you may find interesting. Since there is an assault on free speech and existence of useful information on social media, there is a high probability these will be removed at anytime.
+> This section are stories which you may find interesting. Since there is an assault on free speech and existence of useful information on social media, there is a high probability these will be removed at anytime. You are free to DYOR regardind its facthood.
 
 |                                      Source                                      |                                                                                Story                                                                                 |                                                                                                                                                       Summary                                                                                                                                                        |
 | :------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
 |                 [TheIntercept](https://twitter.com/theintercept)                 | [HARVARD ENDOWMENT INVESTOR AND OTHER BUSINESS LEADERS TAKE A SOLIDARITY TRIP TO ISRAEL](https://theintercept.com/2023/12/19/investors-israel-tech-mission-harvard/) |                                                                                             Bunch of ZioRats pledged support for genocide, make note of the organizations before seeking funding of any kind from them.                                                                                              |
 | [StopZionistHate](https://x.com/StopZionistHate/status/1736452332118815137?s=20) |                          [Tal Broda head of AI Research Calls for genocide](https://x.com/StopZionistHate/status/1736452332118815137?s=20)                           | Sign [Petition](https://www.ipetitions.com/petition/fire-tal-broda-immediately) to force OpenAI to action, as of Thu Dec 21 14:57:56 UTC 2023 there are more than 8K signatures, but the ZioRat Company has not taken any action. It is recommended to abandon all dealings with this company and seek alternatives. |
 |                       [972Mag](https://twitter.com/972mag)                       |    [A mass assassination factory’: Inside Israel’s calculated bombing of Gaza](https://www.972mag.com/mass-assassination-factory-israel-calculated-bombing-gaza/)    |                                                                                              _Habsora_ and AI systemn buil for mass killing and genocide. Speculated to be developed with OpenAI ( Founder is a ZioRat)                                                                                              |
+|                       [AjPlus](https://twitter.com/ajplus)                       |         [Video - How does Isrl use AI technology to generate an unpredented number of targets in Gaza](https://x.com/ajplus/status/1737490036017271156?s=20)         |                                                                                                                 Interesting video that talks about the use of AI for committing efficient genocide.                                                                                                                  |
 
 ## ⚙️ What can I do ?
 
