--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -55,7 +55,7 @@ import { Callout } from "nextra/components";
 
 ### ⚠️ Stories of interest
 
-> This section are stories which you may find interesting. Since there is an assault on free speech and existence of useful information on social media, there is a high probability these will be removed at anytime. You are free to DYOR regardind its facthood.
+> This section are stories which you may find interesting. Since there is an assault on free speech and existence of useful information on social media, there is a high probability these will be removed at anytime. You are free to DYOR regarding its facthood.
 
 |                                      Source                                      |                                                                                Story                                                                                 |                                                                                                                                                       Summary                                                                                                                                                        |
 | :------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------: | :------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------: |
