--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -22,7 +22,7 @@ import { Callout } from "nextra/components";
 | --------------------------------------------------------------------------- | --------------------------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
 | [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | The Witness                       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
 | [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | Stop Zionist Hate                 | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
-| [![](https://i.ibb.co/y0dsbNj/image.png)](https://www.ravenmission.org/)    | Stop Zionist Hate - Raven Mission | https://www.ravenmission.org/       | Project docuemnting atrocities from StopZionsimHate                                                   |
+| [![](https://i.ibb.co/y0dsbNj/image.png)](https://www.ravenmission.org/)    | Stop Zionist Hate - Raven Mission | https://www.ravenmission.org/       | Project documenting atrocities from StopZionsimHate                                                   |
 | [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement                      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
 | [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action                        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
 | [![](https://i.ibb.co/5WMw3S0/image.png)](https://gaza23.com/)              | Gaza23                            | http://gaza23.com/                  | Documenting atrocities                                                                                |
