--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -18,14 +18,14 @@ import { Callout } from "nextra/components";
   Take action now, the forces of evil are ganging up to destroy you.
 </Callout>
 
-| img                                                                         | Org                               | URL                                 | Description                                                                                           |
-| --------------------------------------------------------------------------- | --------------------------------- | ----------------------------------- | ----------------------------------------------------------------------------------------------------- |
-| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | The Witness                       | https://boycott.thewitness.news/    | Searchable database of brands that support Isrl                                                       |
-| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | Stop Zionist Hate                 | https://twitter.com/StopZionistHate | Report Islamophobia                                                                                   |
-| [![](https://i.ibb.co/y0dsbNj/image.png)](https://www.ravenmission.org/)    | Stop Zionist Hate - Raven Mission | https://www.ravenmission.org/       | Project documenting atrocities from StopZionsimHate                                                   |
-| [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | BDS Movement                      | https://twitter.com/BDSmovement     | Global Isrl Boycott Movement                                                                          |
-| [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | Pal Action                        | https://twitter.com/Pal_action      | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
-| [![](https://i.ibb.co/5WMw3S0/image.png)](https://gaza23.com/)              | Gaza23                            | http://gaza23.com/                  | Documenting atrocities                                                                                |
+| img                                                                         | Org                                                                | Description                                                                                           |
+| --------------------------------------------------------------------------- | ------------------------------------------------------------------ | ----------------------------------------------------------------------------------------------------- |
+| [![](https://i.ibb.co/1TBRsrF/image.png)](https://www.thewitness.news/)     | [The Witness](https://boycott.thewitness.news/)                    | Searchable database of brands that support Isrl                                                       |
+| [![](https://i.ibb.co/h73Ty6w/image.png)](https://stopzh.org/)              | [Stop Zionist Hate](https://twitter.com/StopZionistHate)           | Report Islamophobia                                                                                   |
+| [![](https://i.ibb.co/y0dsbNj/image.png)](https://www.ravenmission.org/)    | [Stop Zionist Hate - Raven Mission](https://www.ravenmission.org/) | Project documenting atrocities from StopZionsimHate                                                   |
+| [![](https://i.ibb.co/sR6XxBX/image.png)](https://bdsmovement.net/)         | [BDS Movement](https://twitter.com/BDSmovement)                    | Global Isrl Boycott Movement                                                                          |
+| [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/) | [Pal Action](https://twitter.com/Pal_action)                       | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation |
+| [![](https://i.ibb.co/5WMw3S0/image.png)](https://gaza23.com/)              | [Gaza23](http://gaza23.com/)                                       | Documenting atrocities                                                                                |
 
 ### 📱 Apps
 
@@ -84,6 +84,19 @@ import { Callout } from "nextra/components";
 6. Be extremely critical of accounts posting information without references.
 7. Send prayers.
 8. Don't argue with Islamophobic, Zionist, or anti-Palestinian trolls online. They are all fake accounts being operated by troll farms in India.
+
+### 🫶 Know Aid Orgs
+
+<Callout type="warning" emoji="⚠️">
+  Following aid organizations known to be effective. As usual DYOR. Running
+  list, not final. There are might be many more if you do an online search. I am
+  posting only those which I have personally read about.
+</Callout>
+
+| img                                                                            | Org                                                                | Description                                                      |
+| ------------------------------------------------------------------------------ | ------------------------------------------------------------------ | ---------------------------------------------------------------- |
+| [![](https://i.ibb.co/PYcssnT/image.png)](https://twitter.com/OpenBorders4Aid) | [OpenBorders4Aid](https://linktr.ee/openborders4aid)               | Activism to put political pressure to allow aid                  |
+| [![](https://i.ibb.co/1MjJhw2/image.png)](https://twitter.com/CareForGaza)     | [Direct Volunteer Help](https://www.paypal.com/paypalme/UsmanaliF) | Tweep directly aiding gaza with evidence posted on their account |
 
 ## 💻 Software
 
