--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -2,13 +2,13 @@
 
 # ⛔ 𝔹𝕠𝕪𝕔𝕠𝕥𝕥 𝕚𝕤ℕ𝕆𝕋𝕣𝕖𝕒𝕝
 
+<img src="https://i.ibb.co/dgt1Xtg/r.jpg" width="200%"></img>
+
 import { Analytics } from "@vercel/analytics/react";
 import { SpeedInsights } from "@vercel/speed-insights/next";
 
 <Analytics />
 <SpeedInsights />
-
-> Bring down the oppressors !
 
 ## 🌐 Websites
 
@@ -34,9 +34,9 @@ import { Callout } from "nextra/components";
   if its unavailable.
 </Callout>
 
-| img                                                                          | Org           | URL                                 | Description                                          |
-| ---------------------------------------------------------------------------- | ------------- | ----------------------------------- | ---------------------------------------------------- |
-| [![](https://i.ibb.co/mhMrnMC/image.png)](https://linktr.ee/Nothanksboycott) | No Thanks App | https://twitter.com/NoThanksBoycott | App that scans barcodes to detect links to isNOTreal |
+| img                                                                          | Org                                                  | Description                                                                                            |
+| ---------------------------------------------------------------------------- | ---------------------------------------------------- | ------------------------------------------------------------------------------------------------------ |
+| [![](https://i.ibb.co/mhMrnMC/image.png)](https://linktr.ee/Nothanksboycott) | [No Thanks App](https://twitter.com/NoThanksBoycott) | App that scans barcodes to detect links to isNOTreal, Note this org is also involved in active charity |
 
 ## 📰 Authentic News Sources
 
@@ -107,6 +107,6 @@ import { Callout } from "nextra/components";
   some open source alternative listings to get you started.
 </Callout>
 
-| img                                                                              | Org                     | URL                            | Description                                     |
-| -------------------------------------------------------------------------------- | ----------------------- | ------------------------------ | ----------------------------------------------- |
-| [![](https://i.ibb.co/T4Zqw6n/image.png)](https://www.opensourcealternative.to/) | OpenSourceAlternativeTo | https://twitter.com/jonathimer | Open source alternatives to commercial software |
+| img                                                                              | Org                                                       | Description                                     |
+| -------------------------------------------------------------------------------- | --------------------------------------------------------- | ----------------------------------------------- |
+| [![](https://i.ibb.co/T4Zqw6n/image.png)](https://www.opensourcealternative.to/) | [OpenSourceAlternativeTo](https://twitter.com/jonathimer) | Open source alternatives to commercial software |
