--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -48,10 +48,10 @@ import { Callout } from "nextra/components";
   information. The reader is encouraged to do their own research (DYOR).
 </Callout>
 
-| img                                                                   | Org                                              | URL                             | Description                                                  |
-| --------------------------------------------------------------------- | ------------------------------------------------ | ------------------------------- | ------------------------------------------------------------ |
-| [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | AlJazeera English Official Twitter               | https://twitter.com/AJEnglish   | AlJazeera English Official                                   |
-| [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | Al Jazeera Breaking News,Arabic Official Twitter | https://twitter.com/AJABreaking | AlJazeera Arabic Official breaking news, frequently updated. |
+| img                                                                   | Org                                                                                 | Description                                                                                                                                                                          |
+| --------------------------------------------------------------------- | ----------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
+| [![](https://i.ibb.co/Y3MNf8F/image.png)](https://www.aljazeera.com/) | [AlJazeera English Official Twitter](https://twitter.com/AJEnglish)                 | AlJazeera English Official, ,[GazaGenocide Live Tracker](https://www.aljazeera.com/news/liveblog/2023/12/21/israel-hamas-war-live-global-condemnation-as-gaza-death-toll-hits-20000) |
+| [![](https://i.ibb.co/r5tm8LG/image.png)](https://www.aljazeera.net/) | [Al Jazeera Breaking News,Arabic Official Twitter](https://twitter.com/AJABreaking) | AlJazeera Arabic Official breaking news, frequently updated.                                                                                                                         |
 
 ### ⚠️ Stories of interest
 
