--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -27,7 +27,8 @@ import { Callout } from "nextra/components";
 | [![](https://i.ibb.co/7Xz3k2V/image.png)](https://www.palestineaction.org/)    | [Pal Action](https://twitter.com/Pal_action)                       | Activism aimed at shutting down Isrl Genocidal Orgs primarily in UK, open to world wide participation                                                                               |
 | [![](https://i.ibb.co/5WMw3S0/image.png)](https://gaza23.com/)                 | [Gaza23](http://gaza23.com/)                                       | Documenting atrocities                                                                                                                                                              |
 | [![](https://i.ibb.co/mbS9xBw/image.png)](https://www.notechforapartheid.com/) | [NoTechForAPartheid](https://twitter.com/NoTechApartheid)          | Amazon, google and an unknown number of US Tech companies are providing technologies that enable the massacre of women and children, this movement is to shut these activities down |
-| [![](https://i.ibb.co/vsJMq5F/image.png)](https://accountabilityarchive.org/)  | [Accountability Archive](https://twitter.com/archivegenocide)      | Archive of war crimes against gaza, crowd sourced                                                                                                                                  |
+| [![](https://i.ibb.co/vsJMq5F/image.png)](https://accountabilityarchive.org/)  | [Accountability Archive](https://twitter.com/archivegenocide)      | Archive of war crimes against gaza, crowd sourced                                                                                                                                   |
+| [![](https://i.ibb.co/kXgpZq6/image.png)](https://twitter.com/GenocideVC)      | [Genocide VC's](https://genocide.vc/)                              | List of VC's cheering the genocide and mass murder of gaza                                                                                                                          |
 
 ### 📱 Apps
 
