--- a/w1/v1/pages/index.mdx
+++ b/w1/v1/pages/index.mdx
@@ -10,6 +10,15 @@ import { SpeedInsights } from "@vercel/speed-insights/next";
 <Analytics />
 <SpeedInsights />
 
+## ⚰️ Current Genocide Stats
+
+<Callout type="info" emoji="ℹ️">
+  Stats as of `Thu Dec 28 07:58:53 UTC 2023` ,
+  [Source](https://x.com/EuroMedHR/status/1740035280000921609?s=20)
+</Callout>
+
+[![](https://i.ibb.co/GnbfXnZ/image.png)](https://x.com/EuroMedHR/status/1740035280000921609?s=20)
+
 ## 🌐 Websites
 
 import { Callout } from "nextra/components";
